# experience

./: .arch-inventory  .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  aclocal.m4  autogen.sh  configure.ac
debian/: .arch-inventory  changelog  control  copyright  docs  rules
src/: .arch-inventory  .gitignore  Makefile.am  data.h  drawable.c  drawable.h  drawing_functions.c  drawing_functions.h  dynamic_color.c  dynamic_color.h  experience.h  fill.c  fill.h  filter.c  filter.h  gradient.c  gradient.h  group.c  group.h  group_drawable.c  group_drawable.h  image.c  image.h  image_loading.c  image_loading.h  main.c  match.c  match.h  parser.h  parser.y  parsetree.c  parsetree.h  raw_image.c  raw_image.h  rcstyle.c  rcstyle.h  render.c  render.h  storage.h  style.c  (+4 more)
